--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     //Confetti
-    implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
+    implementation 'nl.dionsegijn:konfetti:1.1.3'
+
+    // AdMob dependency
+    implementation 'com.google.android.gms:play-services-ads:19.6.0'
+
 
 }
